--- a/.github/workflows/ldd-ci.yml
+++ b/.github/workflows/ldd-ci.yml
@@ -1,21 +1,10 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java#apache-maven-with-a-settings-path
 ---
-name: LDD Automation with PDSEN CI Bot
-on:
-   push:
-     branches:
-       - '*'
-
-env:
-  REGRESSION_TEST_PATH: ${{ format('{0}/{1}/', github.workspace, 'test') }}
-  # TODO - Have to hard-code this for now since Actions don't yet allow the use of env here.
-  LOGS_PATH: ${{ format('{0}/{1}', github.workspace, 'logs') }}
-  DEPLOY_PATH: ${{ format('{0}/{1}/{2}/{3}', github.workspace, 'build', 'development', github.sha) }}
-
+name: build
+on: push
 jobs:
-  get_versions:
-    name: Get Applicable PDS4 Versions
+  job1:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -29,23 +18,17 @@ jobs:
                   versions=$versions'"'$line'"',
               fi
           done < $GITHUB_WORKSPACE/pds4_versions.txt
-          
           versions="[${versions::-1}]"
-          echo $versions
+          echo "{\"pds4_version\":${versions}}"
           echo "::set-output name=matrix::{\"pds4_version\": $versions}"
 
-  build: # job 1
-    name: 'LDD Build'
+  job2:
+    needs: job1
     runs-on: ubuntu-latest
-    if: github.actor != 'pdsen-ci'
-
     strategy:
-      matrix: ${{fromJson(needs.get_versions.outputs.matrix)}}
-
+      matrix: ${{fromJson(needs.job1.outputs.matrix)}}
+    #       pds4_version: 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Update submodules for dependencies
-        run: |
-          echo ${{matrix.pds4_version}}
-
+    - run:
+        # echo ${{fromJson(needs.job1.outputs.matrix).pds4_version}}
+        echo ${{matrix.pds4_version}}
